[package]
name = "verse-session-id"
version = "1.0.0"
edition = "2021"
homepage = "https://verseengine.cloud/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/VerseEngine/verse-session-id"
description = "Session ID for [@VerseEngine/verse-core](https://github.com/VerseEngine/verse-core)"

[dependencies]
anyhow = "1"
base64 = "0.13"
ed25519-dalek = { version = "1", features = ["u64_backend"], default-features = false }
getrandom = { version = "0.2", features = ["js", "std"], default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
serde_json = "1"
